# IDC

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  install_db4.sh  islamic_digital_coin-cli.bash-completion  islamic_digital_coin-qt.pro  islamic_digital_coin-tx.bash-completion  islamic_digital_coind.bash-completion  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  changelog  control  islamic_digital_coin-qt.desktop  islamic_digital_coin-qt.install  islamic_digital_coin-qt.lintian-overrides  islamic_digital_coin-qt.manpages  islamic_digital_coin-qt.protocol  islamic_digital_coind.bash-completion  islamic_digital_coind.examples  islamic_digital_coind.install  islamic_digital_coind.lintian-overrides  islamic_digital_coind.manpages  islamic_digital_coind.postinst  islamic_digital_coind.postrm  islamic_digital_coind.service  rules  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  (+2 more)
depends/: Makefile  README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  reduce-memory.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
params/: install-params.sh
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  amount.h  base58.cpp  base58.h  bip38.cpp  bip38.h  blob_uint256.h  blockassembler.cpp  blockassembler.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  (+115 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  islamic_digital_coin.cpp  islamic_digital_coin.qrc  islamic_digital_coin_locale.qrc  islamic_digital_coinstrings.cpp  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  (+30 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui
src/qt/islamic_digital_coin/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  balancebubble.cpp  balancebubble.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  islamic_digital_coingui.cpp  islamic_digital_coingui.h  loadingdialog.cpp  (+57 more)
src/qt/islamic_digital_coin/forms/: addresseswidget.ui  balancebubble.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  topbar.ui  txrow.ui  welcomecontentwidget.ui
src/qt/islamic_digital_coin/res/css/: style_dark.css  style_light.css
src/qt/islamic_digital_coin/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/islamic_digital_coin/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswidget.ui
src/qt/locale/: islamic_digital_coin_de.ts  islamic_digital_coin_en.ts  islamic_digital_coin_en_US.ts  islamic_digital_coin_es.ts  islamic_digital_coin_es_ES.ts  islamic_digital_coin_fr_FR.ts  islamic_digital_coin_hr_HR.ts  islamic_digital_coin_it.ts  islamic_digital_coin_ko_KR.ts  islamic_digital_coin_nl.ts  islamic_digital_coin_pl.ts  islamic_digital_coin_ru.ts  islamic_digital_coin_zh_CN.ts
src/qt/res/: islamic_digital_coin-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp
test/: README.md
util/: fetch-params.sh
(+367 files in other folders)
